<resources>
    <string name="app_name">SurfApp</string>
    <string name="splash_image">Splash image</string>
    <string name="input_login">Логин</string>
    <string name="input_password">Пароль</string>
    <string name="btn_login">Войти</string>
    <string name="input_password_helper">Пароль должен содержать 6 симовлов</string>
    <string name="input_login_error">Поле не может быть пустым</string>
    <string name="show_memes">show memes</string>
    <string name="add_meme">add meme</string>
    <string name="account">account</string>
    <string name="toolbar_title_list_memes">Популярные мемы</string>
    <string name="info_list_empty">Не удалось загрузить ленту</string>
    <string name="item_meme_image">A meme</string>
    <string name="toolbar_item_create_meme">СОЗДАТЬ</string>
    <string name="title_create_meme_et">Заголовок</string>
    <string name="description_create_meme_et">Текст</string>
    <string name="remove_im_create_meme">remove_im</string>
    <string name="title_add_im_dialog">Выбрать фото</string>
    <string name="title_gallery_btn">Из галереи</string>
    <string name="title_camera_btn">Сделать фото</string>
    <string name="title_item_menu_about_app">О приложении</string>
    <string name="title_item_menu_exit">Выйти</string>
    <string name="title_logout_dialog">Действительно хотите выйти?</string>
    <string name="exit_btn_logout_dialog">Выйти</string>
    <string name="cancel_btn_logout_dialog">Отмена</string>
    <string name="search_hint">Поиск</string>
</resources>