<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.CreateMemeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_title_meme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:hint="@string/title_create_meme_et"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description_meme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_title_meme">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/description_create_meme_et"/>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/layout_create_meme_im"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_description_meme">

            <ImageView
                android:id="@+id/create_meme_im"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/item_meme_image"
                android:layout_marginBottom="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:backgroundTint="#4f4d65"
                android:layout_margin="12dp"
                android:contentDescription="@string/remove_im_create_meme"
                android:layout_gravity="top|end"
                app:tint="@color/colorAccent"
                app:elevation="0dp"
                app:hoveredFocusedTranslationZ="0dp"
                app:pressedTranslationZ="0dp"
                app:borderWidth="0dp"
                app:fabCustomSize="32dp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>