<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_im_dialog"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_gallery_btn">

        <ImageButton
            android:id="@+id/camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:padding="7dp"
            android:background="@drawable/add_im_btn_bg" />

        <TextView
            android:id="@+id/title_camera_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_camera_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gallery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/layout_camera_btn"
        app:layout_constraintTop_toBottomOf="@id/title_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image"
            android:padding="7dp"
            android:background="@drawable/add_im_btn_bg" />

        <TextView
            android:id="@+id/title_galley_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gallery_btn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>