<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginScreenFragment"
    android:paddingHorizontal="16dp"
    android:paddingTop="60dp"
    android:paddingBottom="24dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/input_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/input_login"
                app:singleLine="true"
                app:primaryColor="@color/colorAccent">
                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/input_field_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/input_password"
                app:singleLine="true"
                android:layout_marginTop="16dp"
                app:primaryColor="@color/colorAccent">
                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/input_field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"/>
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/btn_login"
            android:stateListAnimator="@null"
            android:elevation="0dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/bgColor"
            android:elevation="1dp"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>